page overflow fixed

--- a/src/Styles/Modules/Projects.sass
+++ b/src/Styles/Modules/Projects.sass
@@ -9,9 +9,13 @@
     width: 100%
     justify-content: center
     gap: 32px
+    &--web
+      gap: 12px
 
     @media(max-width: $tablet-width)
       justify-content: center
 
     @media(max-width: $mobile-width)
       gap: 54px
+      &--web
+        gap: 12px
